# Pandora

./: .gitignore  CusFolder.exe.manifest  LICENSE  README.md  SRS.md  app_icon.py  config.py  convert_icon.py  convert_png_to_ico.py  convert_svg_to_ico.py  crash_wrapper.py  dashboard.py  enum_gpu.cpp  fix.py  fix_main.py  folder_icon.py  folder_view.py  generate_installer_images.py  grid_overlay.py  hub.py  installer.py  launcher.cpp  main.py  radial_menu.py  requirements.txt  run_pandora.py  skin.cpp  sys.cpp  test_blur.py  traceback_dump.txt  ui_common.py  ui_utils.py  uninstaller.py  uninstaller_main.py  utils.py  vector_debug.txt
backup_ui_refactor/: folder_icon.py  folder_view.py  halo.py  layout_logic.py  logic.py  main.py  ui_app_selector.py  ui_common.py  ui_dz_grid.py  ui_utils.py  ws_server.py
core_services/: audio_engine.py  ipc_server.py  media_daemon.py  update_checker.py  ws_server.py
detailed_summary/: README_md_summary.md  SRS_md_summary.md  app_icon_py_summary.md  config_json_summary.md  config_py_summary.md  folder_panel_py_summary.md  grid_overlay_py_summary.md  halo_py_summary.md  hub_modules_base_py_summary.md  hub_modules_clock_py_summary.md  hub_modules_default_py_summary.md  hub_modules_media_py_summary.md  hub_py_summary.md  index_html_summary.md  (+18 more)
native_engine/: CMakeLists.txt  README.md  poc.cpp  test_ipc.py
native_engine/src/: main.cpp
native_engine/src/capture/: AudioCapture.cpp  AudioCapture.h
native_engine/src/dsp/: AudioFrame.h  FFTEngine.cpp  FFTEngine.h
native_engine/src/ipc/: IPCServer.cpp  IPCServer.h  Protocol.h
(+146 files in other folders)
